// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlighter render as text if language doesnt exist 1`] = `
<pre
  style={
    {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-text"
    style={
      {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      style={{}}
    >
      print('hello')
    </span>
  </code>
</pre>
`;

exports[`SyntaxHighlighter renders fortran highlighted text 1`] = `
<pre
  style={
    {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-fortran"
    style={
      {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  C AREA OF A TRIANGLE WITH A STANDARD SQUARE ROOT 
    </span>
    <span
      className="hljs-function hljs-keyword"
      style={{}}
    >
      FUNCTION
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  C INPUT - TAPE READER 
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      UNIT
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      5
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      INTEGER
    </span>
    <span
      style={{}}
    >
       INPUT

    </span>
    <span
      style={{}}
    >
                  C OUTPUT - LINE PRINTER 
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      UNIT
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      6
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      REAL
    </span>
    <span
      style={{}}
    >
       OUTPUT

    </span>
    <span
      style={{}}
    >
                  C INPUT ERROR DISPLAY ERROR OUTPUT CODE 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      1
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      IN
    </span>
    <span
      style={{}}
    >
       JOB CONTROL LISTING

    </span>
    <span
      style={{}}
    >
                      READ INPUT TAPE 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      5
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      501
    </span>
    <span
      style={{}}
    >
      , IA, IB, IC

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      501
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      FORMAT
    </span>
    <span
      style={{}}
    >
       (
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      3
    </span>
    <span
      style={{}}
    >
      I5)

    </span>
                C IA, IB, AND IC MAY NOT BE NEGATIVE OR ZERO

    <span
      style={{}}
    >
                  C FURTHERMORE, THE 
    </span>
    <span
      className="hljs-built_in"
      style={{}}
    >
      SUM
    </span>
    <span
      style={{}}
    >
       OF TWO SIDES OF A TRIANGLE

    </span>
                C MUST BE GREATER THAN THE THIRD SIDE, SO WE CHECK FOR THAT, TOO

    <span
      style={{}}
    >
                      
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      IF
    </span>
    <span
      style={{}}
    >
       (IA) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      701
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      701
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      IF
    </span>
    <span
      style={{}}
    >
       (IB) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      702
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      702
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      IF
    </span>
    <span
      style={{}}
    >
       (IC) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      703
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      703
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      IF
    </span>
    <span
      style={{}}
    >
       (IA+IB-IC) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      704
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      704
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      IF
    </span>
    <span
      style={{}}
    >
       (IA+IC-IB) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      705
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      705
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      IF
    </span>
    <span
      style={{}}
    >
       (IB+IC-IA) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      799
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      STOP
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      1
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  C USING HERON
    </span>
    <span
      className="hljs-string"
      style={{}}
    >
      'S FORMULA WE CALCULATE THE

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                  C AREA OF THE TRIANGLE

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                  799 S = FLOATF (IA + IB + IC) / 2.0

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                      AREA = SQRTF( S * (S - FLOATF(IA)) * (S - FLOATF(IB)) *

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                      +     (S - FLOATF(IC)))

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                      WRITE OUTPUT TAPE 6, 601, IA, IB, IC, AREA

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                  601 FORMAT (4H A= ,I5,5H  B= ,I5,5H  C= ,I5,8H  AREA= ,F10.2,

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                      +        13H SQUARE UNITS)

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                      STOP

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                      END

    </span>
    <span
      className="hljs-string"
      style={{}}
    >
                         
    </span>
  </code>
</pre>
`;

exports[`SyntaxHighlighter renders javascript highlighted text 1`] = `
<pre
  style={
    {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-javascript"
    style={
      {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      className="hljs-keyword"
      style={{}}
    >
      import
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-title class_"
      style={{}}
    >
      React
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      from
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-string"
      style={{}}
    >
      "react"
    </span>
    <span
      style={{}}
    >
      ;

    </span>
    <span
      style={{}}
    />
    <span
      className="hljs-keyword"
      style={{}}
    >
      import
    </span>
    <span
      style={{}}
    >
       uniquePropHOC 
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      from
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-string"
      style={{}}
    >
      "./lib/unique-prop-hoc"
    </span>
    <span
      style={{}}
    >
      ;

    </span>
    

    <span
      style={{}}
    />
    <span
      className="hljs-keyword"
      style={{}}
    >
      class
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-title class_"
      style={{}}
    >
      Expire
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      extends
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-title class_ inherited__"
      style={{}}
    >
      React.Component
    </span>
    <span
      style={{}}
    >
       {

    </span>
    <span
      style={{}}
    >
          
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      constructor
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      className="hljs-params"
      style={{}}
    >
      props
    </span>
    <span
      style={{}}
    >
      ) {

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      super
    </span>
    <span
      style={{}}
    >
      (props);

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      state
    </span>
    <span
      style={{}}
    >
       = { 
    </span>
    <span
      className="hljs-attr"
      style={{}}
    >
      component
    </span>
    <span
      style={{}}
    >
      : props.
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      children
    </span>
    <span
      style={{}}
    >
       }

    </span>
        }

    <span
      style={{}}
    >
          
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      componentDidMount
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      style={{}}
    >
      ) {

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="hljs-built_in"
      style={{}}
    >
      setTimeout
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      className="hljs-function"
      style={{}}
    >
      () =&gt;
    </span>
    <span
      style={{}}
    >
       {

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      setState
    </span>
    <span
      style={{}}
    >
      ({

    </span>
    <span
      style={{}}
    >
                      
    </span>
    <span
      className="hljs-attr"
      style={{}}
    >
      component
    </span>
    <span
      style={{}}
    >
      : 
    </span>
    <span
      className="hljs-literal"
      style={{}}
    >
      null
    </span>
    <span
      style={{}}
    >
      

    </span>
                });

    <span
      style={{}}
    >
              }, 
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      props
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      time
    </span>
    <span
      style={{}}
    >
       || 
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      props
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      seconds
    </span>
    <span
      style={{}}
    >
       * 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      1000
    </span>
    <span
      style={{}}
    >
      );

    </span>
        }

    <span
      style={{}}
    >
          
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      render
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      style={{}}
    >
      ) {

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      return
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      state
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      component
    </span>
    <span
      style={{}}
    >
      ;

    </span>
        }

    }
  </code>
</pre>
`;

exports[`SyntaxHighlighter renders text while language loads 1`] = `
<pre
  style={
    {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-gherkin"
    style={
      {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  C AREA OF 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      A
    </span>
    <span
      style={{}}
    >
       TRIANGLE WITH 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      A
    </span>
    <span
      style={{}}
    >
       STANDARD SQUARE ROOT FUNCTION

    </span>
    <span
      style={{}}
    >
                  C 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      INPUT
    </span>
    <span
      style={{}}
    >
       - TAPE READER UNIT 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      5
    </span>
    <span
      style={{}}
    >
      , INTEGER 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      INPUT
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  C OUTPUT - LINE PRINTER UNIT 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      6
    </span>
    <span
      style={{}}
    >
      , REAL OUTPUT

    </span>
    <span
      style={{}}
    >
                  C 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      INPUT
    </span>
    <span
      style={{}}
    >
       ERROR 
    </span>
    <span
      className="hljs-attribute"
      style={{}}
    >
      DISPLAY
    </span>
    <span
      style={{}}
    >
       ERROR OUTPUT 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      CODE
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      1
    </span>
    <span
      style={{}}
    >
       IN JOB CONTROL LISTING

    </span>
    <span
      style={{}}
    >
                      READ 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      INPUT
    </span>
    <span
      style={{}}
    >
       TAPE 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      5
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      501
    </span>
    <span
      style={{}}
    >
      , IA, IB, IC

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      501
    </span>
    <span
      style={{}}
    >
       FORMAT (
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      3
    </span>
    <span
      style={{}}
    >
      I5)

    </span>
                C IA, IB, AND IC MAY NOT BE NEGATIVE OR ZERO

    <span
      style={{}}
    >
                  C FURTHERMORE, THE SUM OF TWO SIDES OF 
    </span>
    <span
      className="hljs-selector-tag"
      style={{}}
    >
      A
    </span>
    <span
      style={{}}
    >
       TRIANGLE

    </span>
                C MUST BE GREATER THAN THE THIRD SIDE, SO WE CHECK FOR THAT, TOO

    <span
      style={{}}
    >
                      IF (IA) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      701
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      701
    </span>
    <span
      style={{}}
    >
       IF (IB) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      702
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      702
    </span>
    <span
      style={{}}
    >
       IF (IC) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      703
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      703
    </span>
    <span
      style={{}}
    >
       IF (IA+IB-IC) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      704
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      704
    </span>
    <span
      style={{}}
    >
       IF (IA+IC-IB) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      705
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      705
    </span>
    <span
      style={{}}
    >
       IF (IB+IC-IA) 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      799
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      777
    </span>
    <span
      style={{}}
    >
       STOP 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      1
    </span>
    <span
      style={{}}
    >
      

    </span>
                C USING HERON'S FORMULA WE CALCULATE THE

                C AREA OF THE TRIANGLE

    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      799
    </span>
    <span
      style={{}}
    >
       S = FLOATF (IA + IB + IC) / 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      2.0
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                      AREA = 
    </span>
    <span
      className="hljs-built_in"
      style={{}}
    >
      SQRTF
    </span>
    <span
      style={{}}
    >
      ( S * (S - FLOATF(IA)) * (S - FLOATF(IB)) *

    </span>
                    +     (S - FLOATF(IC)))

    <span
      style={{}}
    >
                      WRITE OUTPUT TAPE 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      6
    </span>
    <span
      style={{}}
    >
      , 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      601
    </span>
    <span
      style={{}}
    >
      , IA, IB, IC, AREA

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      601
    </span>
    <span
      style={{}}
    >
       FORMAT (
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      4
    </span>
    <span
      style={{}}
    >
      H A= ,I5,
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      5
    </span>
    <span
      style={{}}
    >
      H  B= ,I5,
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      5
    </span>
    <span
      style={{}}
    >
      H  C= ,I5,
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      8
    </span>
    <span
      style={{}}
    >
      H  AREA= ,F10.
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      2
    </span>
    <span
      style={{}}
    >
      ,

    </span>
    <span
      style={{}}
    >
                      +        
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      13
    </span>
    <span
      style={{}}
    >
      H SQUARE UNITS)

    </span>
                    STOP

                    END

                       
  </code>
</pre>
`;

exports[`When the code split is loaded - SyntaxHighlighter renders jsx highlighted text 1`] = `
<pre
  style={
    {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-javascript"
    style={
      {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      className="hljs-keyword"
      style={{}}
    >
      import
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-title class_"
      style={{}}
    >
      React
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      from
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-string"
      style={{}}
    >
      "react"
    </span>
    <span
      style={{}}
    >
      ;

    </span>
    <span
      style={{}}
    >
        
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      import
    </span>
    <span
      style={{}}
    >
       uniquePropHOC 
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      from
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-string"
      style={{}}
    >
      "./lib/unique-prop-hoc"
    </span>
    <span
      style={{}}
    >
      ;

    </span>
    

    <span
      style={{}}
    >
        
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      class
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-title class_"
      style={{}}
    >
      Expire
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      extends
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-title class_ inherited__"
      style={{}}
    >
      React.Component
    </span>
    <span
      style={{}}
    >
       {

    </span>
    <span
      style={{}}
    >
            
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      constructor
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      className="hljs-params"
      style={{}}
    >
      props
    </span>
    <span
      style={{}}
    >
      ) {

    </span>
    <span
      style={{}}
    >
                
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      super
    </span>
    <span
      style={{}}
    >
      (props);

    </span>
    <span
      style={{}}
    >
                
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      state
    </span>
    <span
      style={{}}
    >
       = { 
    </span>
    <span
      className="hljs-attr"
      style={{}}
    >
      component
    </span>
    <span
      style={{}}
    >
      : props.
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      children
    </span>
    <span
      style={{}}
    >
       }

    </span>
          }

    <span
      style={{}}
    >
            
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      componentDidMount
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      style={{}}
    >
      ) {

    </span>
    <span
      style={{}}
    >
                
    </span>
    <span
      className="hljs-built_in"
      style={{}}
    >
      setTimeout
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      className="hljs-function"
      style={{}}
    >
      () =&gt;
    </span>
    <span
      style={{}}
    >
       {

    </span>
    <span
      style={{}}
    >
                    
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      setState
    </span>
    <span
      style={{}}
    >
      ({

    </span>
    <span
      style={{}}
    >
                        
    </span>
    <span
      className="hljs-attr"
      style={{}}
    >
      component
    </span>
    <span
      style={{}}
    >
      : 
    </span>
    <span
      className="hljs-literal"
      style={{}}
    >
      null
    </span>
    <span
      style={{}}
    >
      

    </span>
                  });

    <span
      style={{}}
    >
                }, 
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      props
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      time
    </span>
    <span
      style={{}}
    >
       || 
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      props
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      seconds
    </span>
    <span
      style={{}}
    >
       * 
    </span>
    <span
      className="hljs-number"
      style={{}}
    >
      1000
    </span>
    <span
      style={{}}
    >
      );

    </span>
          }

    <span
      style={{}}
    >
            
    </span>
    <span
      className="hljs-title function_"
      style={{}}
    >
      render
    </span>
    <span
      style={{}}
    >
      (
    </span>
    <span
      style={{}}
    >
      ) {

    </span>
    <span
      style={{}}
    >
                
    </span>
    <span
      className="hljs-keyword"
      style={{}}
    >
      return
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="hljs-variable language_"
      style={{}}
    >
      this
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      state
    </span>
    <span
      style={{}}
    >
      .
    </span>
    <span
      className="hljs-property"
      style={{}}
    >
      component
    </span>
    <span
      style={{}}
    >
      ;

    </span>
          }

      }
  </code>
</pre>
`;
